Fixed issue with image cropping

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 
 
 .gallery img {
+ display: none;
  width: 100%;
  height: 75%;
  object-fit: contain; /* Overfit the images to cover the whole screen */
@@ -37,9 +38,5 @@ body, html {
   flex-wrap: nowrap;
   overflow-x: auto;
   height: 100vh;
-}
-
-:target img {
- display: none;
 }
 
